fix non-generic combo box (java 1.6)